<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="phone">Phone</string>
    <string name="note">Note:</string>
    <string name="choose_delivery_method">Choose delivery method</string>
    <string name="same_day_delivery">Same day delivery</string>
    <string name="next_day_delivery">Next day delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="contact">Contact</string>
    <string name="favorites">Favorites</string>
    <string name="status">Status</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>