<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="30"
        android:title="@string/contact"
        app:showAsAction="never" />
</menu>